# go_bazel_test_win_example

./: BUILD.bazel  README.md  WORKSPACE  def.bzl  test_rule_test.go
