load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")

filegroup(
    name = "all_files",
    srcs = [
        "WORKSPACE",
        "BUILD.bazel",
        "def.bzl",
    ],
    testonly = True,
	visibility = ["//visibility:public"],
)

go_bazel_test(
    name = "test_rule_test",
    size = "medium",
    srcs = ["test_rule_test.go"],
    rule_files = [
        ":all_files",
    ],
)
